[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recruitment-mcp"
version = "0.1.0"
description = "MCP server for data.go.kr public recruitment API"
requires-python = ">=3.12"
dependencies = [
  "mcp>=0.2.1",
  "python-dotenv",
  "requests",
]

[project.scripts]
recruitment-mcp = "server:main"


[tool.setuptools.packages.find]
where = ["src"]